Continue attempts to reinstall corrupt policy extensions across restarts

If a policy force-installed extension gets corrupted, we'll disable it
and start attempting to reinstall it. However, if chrome shuts down
before this is complete, we won't start trying again on any subsequent
run of the browser.

This also switches from using the ManagementPolicy :: Provider ::
UserMayModifySettings function to determine "policy force installed-ess"
to using ManagementPolicy :: Provider :: MustRemainEnabled instead, which
is more correct for the case of force installs (eg
"ExtensionInstallForcelist" in the policy settings).

BUG=664690

Review-Url: https://codereview.chromium.org/2495123003
Cr-Commit-Position: refs/heads/master@{#434012}

Former-commit-id: 0de8a8bc49761792dc5a74f001395cdd11ddc4e6